--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Courses - Home</title>
+    <meta name="description" content="">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/code-slash-outline.svg">
 </head>
+
 <body>
     <!-- Start Header -->
     <header>
@@ -17,7 +21,7 @@
                 <ul class="buttons flex">
                     <li class="flex">
                         <ion-icon name="moon-outline"></ion-icon>
-                        <a href="" class="dark">dark mode</a>
+                        <a id="dark" href="" class="dark">dark mode</a>
                     </li>
                     <li class="flex">
                         <ion-icon name="heart-outline"></ion-icon>
@@ -45,29 +49,46 @@
     <!-- End Welcome -->
 
     <!-- Start Main -->
-    <main>   
+    <main>
         <div class="container">
             <section class="search">
-                <ion-icon name="search-outline"></ion-icon>
+                <ion-icon class="search-icon" name="search-outline"></ion-icon>
                 <input type="search" value="Search the website...">
-                <div class="selects">
-                    <div class="select">
+                    <div class="select sort">
                         <p>sort by:</p>
-                        <select name="" id="">
-                            <option value="">default</option>
-                        </select>
+                        <div class="selcet-bottom flex">
+                            <p class="def">default</p>
+                            <ion-icon class="arrow-icon" name="chevron-down-outline"></ion-icon>
+                        </div>
                     </div>
+                    <div class="select filter">
+                        <p>filter by:</p>
+                        <div class="selcet-bottom flex">
+                            <p class="def">default</p>
+                            <ion-icon class="arrow-icon" name="chevron-down-outline"></ion-icon>
+                        </div>
+                    </div>
+            </section>
+            <section class="courses">
+                <div class="courses-text">
+                    <p class="capitalize">"24" web topic found</p>
+                </div>
+                <div id="courses-content" class="courses-content flex">
                 </div>
             </section>
         </div>
-        <div id="test" class="courses">
-       </div>
     </main>
-     <!--End Main  -->
-      
+    <!--End Main  -->
+    <!-- Start Footer -->
+    <footer>
+        <p><span class="capitalize">developed</span> with <ion-icon name="heart"></ion-icon> &copy; 2024</p>
+    </footer>
+    <!-- End Footer -->
+    
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="assets/js/topics.json"></script>
     <script src="assets/js/main.js"></script>
 </body>
+
 </html>
