--- a/details.html
+++ b/details.html
@@ -10,13 +10,13 @@
     <link rel="icon" href="assets/code-slash-outline.svg">
 </head>
 
-<body>
+<body class="detail">
     <!-- Start Header -->
     <header>
         <div class="container">
             <nav class="flex">
                 <div class="logo">
-                    <a href="">wep topics</a>
+                    <a href="/">wep topics</a>
                 </div>
                 <ul class="buttons flex">
                     <li class="flex">
@@ -32,12 +32,19 @@
         </div>
     </header>
     <!-- End Header -->
+
+    <div class="shapes">
+        <div class="shape">
+
+        </div>
+    </div>
+
     <!-- start Welcome -->
-    <section class="welcome">
-        <div class="tri">
+    <section class="welcome detail flex">
+        <!-- <div class="tri">
             <div class="triangle-right"></div>
             <div class="triangle-left"></div>
-        </div>
+        </div> -->
         <div class="container">
             <div class="text">
                 <h1>Welcome to our website!</h1>
