--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <nav class="flex">
                 <div class="logo">
-                    <a href="">wep topics</a>
+                    <a href="/">wep topics</a>
                 </div>
                 <ul class="buttons flex">
                     <li class="flex">
@@ -33,12 +33,17 @@
     </header>
     <!-- End Header -->
 
+    <div class="shapes">
+        <div class="shape">
+
+        </div>
+    </div>
     <!-- start Welcome -->
-    <section class="welcome">
-        <div class="tri">
+    <section class="welcome flex">
+        <!-- <div class="tri">
             <div class="triangle-right"></div>
             <div class="triangle-left"></div>
-        </div>
+        </div> -->
         <div class="container">
             <div class="text">
                 <h1>Welcome to our website!</h1>
@@ -84,6 +89,7 @@
         <p><span class="capitalize">developed</span> with <ion-icon name="heart"></ion-icon> &copy; 2024</p>
     </footer>
     <!-- End Footer -->
+
     
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
