--- a/details.html
+++ b/details.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Courses - Course-Name</title>
-    <meta name="description" content="">
+    <meta name="description" content="Master HTML with our hands-on course. Learn the fundamentals of web development, including HTML5, CSS, and responsive design. Get practical experience with real-world projects and launch your career as a web developer. Enroll now and start building amazing websites!">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/imgs/code-slash-outline.svg">
 </head>
