--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Courses - Home</title>
-    <meta name="description" content="">
+    <meta name="description" content="Unlock your potential with our comprehensive IT courses. Explore programming, cybersecurity, networking, and more. Learn from industry experts and earn valuable certifications. Enroll now to advance your career in technology!">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/imgs/code-slash-outline.svg">
 </head>
