--- a/details.html
+++ b/details.html
@@ -16,7 +16,7 @@
         <div class="container">
             <nav class="flex">
                 <div class="logo">
-                    <a href="/">wep topics</a>
+                    <a href="index.html">wep topics</a>
                 </div>
                 <ul class="buttons flex">
                     <li class="flex">
@@ -25,7 +25,7 @@
                     </li>
                     <li class="flex">
                         <ion-icon name="heart-outline"></ion-icon>
-                        <a href="" class="fav">favourites</a>
+                        <a href="favourites.html" class="fav">favourites</a>
                     </li>
                 </ul>
             </nav>
@@ -41,10 +41,6 @@
 
     <!-- start Welcome -->
     <section class="welcome detail flex">
-        <!-- <div class="tri">
-            <div class="triangle-right"></div>
-            <div class="triangle-left"></div>
-        </div> -->
         <div class="container">
             <div class="text">
                 <h1>Welcome to our website!</h1>
@@ -57,55 +53,11 @@
         <!-- start Course-Datails Section -->
         <section class="course-datails">
             <div class="container" id="course-datails">
-                <!-- <div class="course-details-text">
-                    <h2>web development</h2>        
-                    <h3>html</h3>   
-                    <div class="stars">
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                        <ion-icon name="star"></ion-icon>
-                    </div>
-                    <p class="course-desc">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis minima quibusdam placeat, perferendis magnam, ipsa earum aliquam deleniti, necessitatibus voluptas illum autem praesentium dicta architecto odit consectetur amet quod ducimus.
-                    </p>
-                </div>
-    
-                <div class="course-detail-box">
-                    <img src="assets/imgs/courses/javascript.jpg" alt="">
-                    <div class="course-detail-box-content">
-                        <p class="author"><span>html</span> by <a href="" class="capitalize">sarah</a></p>
-                        <div class="course-detail-box-fav">
-                            <p>intreseted about this topic?</p>
-                            <a href="" class="capitalize">add to favourite <ion-icon name="heart-outline"></ion-icon></a>
-                            <p class="cred capitalize">unlimted credits</p>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </section>
 
         <section class="course-content" id="table-content">
-                <!-- <h4 class="capitalize"> <span>html</span> sub topics</h4>
-                <ul>
-                    <li>
-                        <ion-icon name="checkmark-circle-outline"></ion-icon>
-                        <a href="">HTML syntax </a>
-                    </li>
-                    <li>
-                        <ion-icon name="checkmark-circle-outline"></ion-icon>
-                        <a href="">HTML syntax </a>
-                    </li>
-                    <li>
-                        <ion-icon name="checkmark-circle-outline"></ion-icon>
-                        <a href="">HTML syntax </a>
-                    </li>
-                    <li>
-                        <ion-icon name="checkmark-circle-outline"></ion-icon>
-                        <a href="">HTML syntax </a>
-                    </li>
-                </ul> -->
+                
         </section>
     <!-- Start Footer -->
     <footer>
@@ -117,6 +69,7 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="assets/js/topics.json"></script>
     <script src="assets/js/detail.js"></script>
+    <script src="assets/js/dark.js"></script>
 </body>
 
 </html>
