--- a/favourites.html
+++ b/favourites.html
@@ -34,11 +34,11 @@
     </header>
     <!-- End Header -->
 
-    <section class="shapes">
-        <section class="shape">
+    <div class="shapes">
+        <div class="shape">
 
-        </section>
-    </section>
+        </div>
+    </div>
     <!-- start Welcome -->
     <section class="welcome flex">
         <div class="container">
@@ -86,6 +86,40 @@
         <p><span class="capitalize">developed</span> with <ion-icon name="heart"></ion-icon> &copy; 2024</p>
     </footer>
     <!-- End Footer -->
+
+    <section class="favourites">
+        <div class="container">
+            <h2 class="capitalize">my favourites topics</h2>
+            <div class="favourites-content">
+                <div class="favourites-content-box">
+                    <img src="assets/imgs/courses/react.webp" alt="">
+                    <div class="favourites-text">
+                        <h3 class="capitalize">react</h3>
+                        <div class="stars">
+                            <ion-icon name="star"></ion-icon>
+                            <ion-icon name="star"></ion-icon>
+                            <ion-icon name="star"></ion-icon>
+                            <ion-icon name="star"></ion-icon>
+                            <ion-icon name="star-outline"></ion-icon>
+                        </div>
+                    </div>
+                </div>
+                <div class="favourites-content-box">
+                    <img src="assets/imgs/courses/css.webp" alt="">
+                    <div class="favourites-text">
+                        <h3 class="capitalize">css</h3>
+                        <div class="stars">
+                            <ion-icon name="star"></ion-icon>
+                            <ion-icon name="star"></ion-icon>
+                            <ion-icon name="star"></ion-icon>
+                            <ion-icon name="star"></ion-icon>
+                            <ion-icon name="star-outline"></ion-icon>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
