--- a/favourites.html
+++ b/favourites.html
@@ -20,9 +20,9 @@
                     <a href="index.html">wep topics</a>
                 </div>
                 <ul class="buttons flex">
-                    <li class="flex">
+                    <li class="flex" id="dark">
                         <ion-icon name="moon-outline"></ion-icon>
-                        <a id="dark" href="" class="dark">dark mode</a>
+                        <a href="" class="dark">dark mode</a>
                     </li>
                     <li class="flex">
                         <ion-icon name="heart-outline"></ion-icon>
