--- a/favourites.html
+++ b/favourites.html
@@ -17,10 +17,10 @@
         <div class="container">
             <nav class="flex">
                 <div class="logo">
-                    <a href="index.html">wep topics</a>
+                    <a href="index.html">web topics</a>
                 </div>
                 <ul class="buttons flex">
-                    <li class="flex" id="dark">
+                    <li class="flex dark" id="dark">
                         <ion-icon name="moon-outline"></ion-icon>
                         <a href="" class="dark">dark mode</a>
                     </li>
