--- a/favourites.html
+++ b/favourites.html
@@ -57,19 +57,21 @@
                 <ion-icon class="search-icon" name="search-outline"></ion-icon>
                 <input type="search" value="Search the website...">
                 <div class="select sort">
-                    <p>sort by:</p>
-                    <div class="selcet-bottom flex">
-                        <label class="def">default</label>
-                        <ion-icon class="arrow-icon" name="chevron-down-outline"></ion-icon>
+                    <label for="sort">sort by:</label>
+                    <div class="selcet-bottom">
+                        <select name="" id="sort">
+                            <option value="">Default</option>
+                        </select>
                     </div>
-                </div>
+                </div> 
                 <div class="select filter">
-                    <p>filter by:</p>
-                    <div class="selcet-bottom flex">
-                        <label for="" class="def">default</label>
-                        <ion-icon class="arrow-icon" name="chevron-down-outline"></ion-icon>
+                    <label for="sort">filter by:</label>
+                    <div class="selcet-bottom">
+                        <select name="" id="sort">
+                            <option value="">Default</option>
+                        </select>
                     </div>
-                </div>
+                </div> 
             </section>
             <section class="courses">
                 <div class="courses-text">
