--- a/favourites.html
+++ b/favourites.html
@@ -20,9 +20,9 @@
                     <a href="index.html">web topics</a>
                 </div>
                 <ul class="buttons flex">
-                    <li class="flex dark" id="dark">
+                    <li class="flex dark" id="theme">
                         <ion-icon name="moon-outline"></ion-icon>
-                        <a href="" class="dark">dark mode</a>
+                        <a href="" class="dark" id="themeText">dark mode</a>
                     </li>
                     <li class="flex">
                         <ion-icon name="heart-outline"></ion-icon>
@@ -77,7 +77,7 @@
                 <div class="courses-text">
                     <p class="capitalize">"24" web topic found</p>
                 </div>
-                <div id="courses-content" class="courses-content flex">
+                <div id="courses-content" class="courses-content">
                 </div>
             </section>
         </div>
@@ -126,9 +126,7 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="assets/js/topics.json"></script>
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/dark.js"></script>
+    <script src="assets/js/main.js" type="module"></script>
 </body>
 
 </html>
