--- a/details.html
+++ b/details.html
@@ -7,7 +7,7 @@
     <title>Courses - Course-Name</title>
     <meta name="description"
         content="Master HTML with our hands-on course. Learn the fundamentals of web development, including HTML5, CSS, and responsive design. Get practical experience with real-world projects and launch your career as a web developer. Enroll now and start building amazing websites!">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="sources/css/style.css">
     <link rel="icon" href="assets/imgs/code-slash-outline.svg">
 </head>
 
@@ -25,8 +25,8 @@
                         <a href="" class="dark" id="themeText">dark mode</a>
                     </li>
                     <li class="flex" id="favButton">
-                        <ion-icon name="heart-outline"><a href="favourites.html"></a></ion-icon>
-                        <a href="favourites.html" class="fav">favourites</a>
+                        <ion-icon name="heart-outline"><a href=""></a></ion-icon>
+                        <a href="" class="fav">favourites</a>
                     </li>
                 </ul>
             </nav>
@@ -75,42 +75,16 @@
     <section class="favourites" id="favourites">
         <div class="container">
             <h2 class="capitalize">my favourites topics</h2>
-            <div class="favourites-content">
-                <div class="favourites-content-box">
-                    <img src="assets/imgs/courses/react.webp" alt="">
-                    <div class="favourites-text">
-                        <h3 class="capitalize">react</h3>
-                        <div class="stars">
-                            <ion-icon name="star"></ion-icon>
-                            <ion-icon name="star"></ion-icon>
-                            <ion-icon name="star"></ion-icon>
-                            <ion-icon name="star"></ion-icon>
-                            <ion-icon name="star-outline"></ion-icon>
-                        </div>
-                    </div>
-                </div>
-                <div class="favourites-content-box">
-                    <img src="assets/imgs/courses/css.webp" alt="">
-                    <div class="favourites-text">
-                        <h3 class="capitalize">css</h3>
-                        <div class="stars">
-                            <ion-icon name="star"></ion-icon>
-                            <ion-icon name="star"></ion-icon>
-                            <ion-icon name="star"></ion-icon>
-                            <ion-icon name="star"></ion-icon>
-                            <ion-icon name="star-outline"></ion-icon>
-                        </div>
-                    </div>
-                </div>
+            <div class="favourites-content" id="favContent">
             </div>
         </div>
     </section>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> -->
-    <script type="module" src="assets/js/main.js"></script>
-    <script type="module" src="assets/js/details.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script type="module" src="sources/js/main.js"></script>
+    <script type="module" src="sources/js/components/Details/details.js"></script>
 </body>
 
 </html>
