--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Courses - Home</title>
     <meta name="description"
         content="Unlock your potential with our comprehensive IT courses. Explore programming, cybersecurity, networking, and more. Learn from industry experts and earn valuable certifications. Enroll now to advance your career in technology!">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="sources/css/style.css">
     <link rel="icon" href="assets/imgs/code-slash-outline.svg">
 </head>
 
@@ -25,8 +25,8 @@
                         <a href="" class="dark" id="themeText">dark mode</a>
                     </li>
                     <li class="flex" id="favButton">
-                        <ion-icon name="heart-outline"><a href="favourites.html"></a></ion-icon>
-                        <a href="favourites.html" class="fav">favourites</a>
+                        <ion-icon name="heart-outline"><a href=""></a></ion-icon>
+                        <a href="" class="fav">favourites</a>
                     </li>
                 </ul>
             </nav>
@@ -55,19 +55,21 @@
         <div class="container">
             <section class="search">
                 <ion-icon class="search-icon" name="search-outline"></ion-icon>
-                <input type="search" value="Search the website...">
+                <input type="search" placeholder="Search the website..." id="searchInput">
                 <div class="select sort">
                     <label for="sort">sort by:</label>
                     <div class="selcet-bottom">
                         <select name="" id="sort">
-                            <option value="">Default</option>
+                            <option value="default">Default</option>
+                            <option value="title">Topic Title</option>
+                            <option value="name">Author Name</option>
                         </select>
                     </div>
                 </div> 
                 <div class="select filter">
                     <label for="sort">filter by:</label>
                     <div class="selcet-bottom">
-                        <select name="" id="sort">
+                        <select name="" id="filter">
                             <option value="">Default</option>
                         </select>
                     </div>
@@ -106,8 +108,9 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="assets/js/main.js" type="module"></script>
-    <script type="module" src="assets/js/fav.js"></script>
+    <script src="sources/js/main.js" type="module"></script>
+    <script type="module" src="sources/js/components/Home/home.js"></script>
+    <script src="sources/js/components/Home/search.js" type="module"></script>
 </body>
 
 </html>
